--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ html{
 
 button{
   background-color:#800;
-  color: #786550;
+  color: #bfa58a;
   padding: 2em;
   font-size: 1em;
+  border-radius: 50% 20%;
 }
